my-menu-project/src/components/KitchenMain/KitchenMain.module.css
.wrapper {
    width: 100%;
    height: 100vh;
    display: flex;
    align-items: center;
    flex-direction: column;
     background: radial-gradient(
      circle at top right,
      rgba(120, 0, 0, 0.25),
      transparent 100%
    ),
    linear-gradient(
      to bottom,
      #0b0b0f,
      #050507
    );
}

.wrapper .heading {
    position: fixed;
    border-radius: 1em;
    box-shadow: 0 0 1em 0 rgb(0, 0, 0.5);
    margin-top: 1em;
    width: 73%;
    margin-left: 20em;
    padding: 3em 1.5em;
    background: 
    linear-gradient(
      to right,
      rgba(0, 0, 0, 0.5) 100%,
      rgba(10,10,10,0.2)
    ),
    url('../../../public/benedikt.jpg') center/cover no-repeat;
}

.heading h1 {
    font-size: 2.5em;
    margin-top: 0.3em;
    margin-bottom: 0.2em;
}

.heading .p {
    color: #c6c6c6;
    font-size: 1.1em;
}   

.heading .clock {
    color: #f68606;
}

.selectedMeal {
    margin-top: 12em;
    margin-left: -23.5em;
    font-weight: normal;
}

/* --------------------------------------------------------- */

.products {
    margin-top: 0.5em;
    display: flex;
    gap: 1em;
    margin-left: 22%;   
}

.product {
    max-width: 350px;
    max-height: 300px;
    background-color: rgb(51, 7, 7);
    border-radius: 1em;
    overflow: hidden;
    cursor: pointer;
    transition: all 0.35s ease;
}

.product:hover {
    transform: translateY(-10px) scale(1.02);
    border-color: rgba(48, 48, 48, 0.2);
    box-shadow: 0 5px 20px #fff;
}

.picture {
    width: 100%;
    height: 180px;
}

.productInfo {
    padding: 0.3em 1em;
}

.productInfo h3 {
    margin-top: 0;
}

.description {
    font-size: 0.9em;
    margin-top: -0.5em;
    color: #cacaca;
}

.price {
    color: #D97706;
    font-weight: bold;
}

